# flower

.github/workflows/: examples.yml
examples/advanced_tensorflow/: client.py  run.example.sh  run.sh  server.py
examples/quickstart_simulation/: README.md  run.sh
examples/quickstart_tensorflow/: client.py  pyproject.toml  run.ci.sh  run.example.sh  run.sh  server.py
